--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       rel="icon"
       href="https://cdn.iconscout.com/icon/free/png-256/free-code-280-460136.png"
     />
+    <link href="./output.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web developer</title>
   </head>
